--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,16 +1,28 @@
-<div class="card card-body p-5 mt-4">
-  <h1 class="display-4">Notes App Nodejs And Mongodb!</h1>
-  <p class="lead">A simple App to manage Notes developed with Nodejs, Express,
-    Mongodb and Javascript Technologies</p>
-  <hr class="my-4" />
-  <p>veniam voluptatibus aliquid unde sit Libero veniam similique ex reiciendis
-    doloribus! Deleniti sunt cum ad est atque. Esse earum
-  </p>
-  <div>
-    <a
-      class="btn btn-primary btn-lg"
-      href="/auth/signup"
-      role="button"
-    >Register</a>
+<div class="card card-body text-center float-center">
+  <h1 class="display-5">GESTOR DE ORDENES DE TRABAJO</h1>
+<hr class="my-2" />
+
+<hr class="my-2" />
+  
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="3000">
+        <img src="/img/tecnologia.jpg" class="d-block mx-auto w-50 imgc" alt="tecnologia">
+      </div>
+      <div class="carousel-item" data-bs-interval="3000">
+        <img src="/img/soporte.jpg" class="d-block mx-auto w-50 imgc" alt="soporte">
+      </div>
+      <div class="carousel-item" data-bs-interval="3000">
+        <img src="/img/sp.jpeg" class="d-block mx-auto w-50 imgc" alt="sp">
+      </div>
+      <div class="carousel-item" data-bs-interval="3000">
+        <img src="/img/tecnologia1.jpg" class="d-block mx-auto w-50 imgc" alt="tecnologia1">
+      </div>
+      <div class="carousel-item" data-bs-interval="3000">
+        <img src="/img/trabajos2.jpg" class="d-block mx-auto w-50 imgc" alt="trabajos2">
+      </div>
+    </div>
   </div>
+
+  
 </div>
