--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,11 +1,31 @@
 body {
-  background: #121212;
+  height: 950px;
+  background-image: url("/img/fondo3.jpg");
+  background-size: cover;
+  background-repeat: repeat;
+  background-position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
 }
 
 .logo {
-  width: 30%;
+  width: 40%;
 }
 
 .bg-black {
   background: #090909;
+}
+
+.imgc {
+  width: 800px;
+}
+
+h3 {
+  font-family: 'Nosifer', cursive;
+}
+
+.fa-edit{
+  color: rgb(255, 208, 0);
 }
