--- a/src/views/auth/signup.hbs
+++ b/src/views/auth/signup.hbs
@@ -1,60 +1,60 @@
 <div class="row">
   <div class="col-md-4 mx-auto">
-    <div class="card bg-black text-white">
-      <div class="card-header pt-5">
+    <div class="card  text-white">
+      <div class="card-header">
         <h4 class="text-center">
-          Account Register
+          REGISTRAR CUENTA
         </h4>
       </div>
       <div class="card-body">
         <form action="/auth/signup" method="POST">
-          <div class="mb-3">
-            <label for="name">Name:</label>
+          <div class="mb-2">
+            <label for="name">Nombre:</label>
             <input
               type="text"
-              class="form-control bg-dark text-white"
+              class="form-control  text-white"
               name="name"
               placeholder="Name"
               value="{{name}}"
             />
           </div>
-          <div class="mb-3">
-            <label for="email">Email:</label>
+          <div class="mb-2">
+            <label for="email">Correo Electronico:</label>
             <input
               type="email"
-              class="form-control bg-dark text-white"
+              class="form-control  text-white"
               name="email"
               placeholder="Email"
               value="{{email}}"
             />
           </div>
-          <div class="mb-3">
-            <label for="password">Password</label>
+          <div class="mb-2">
+            <label for="password">Contraseña</label>
             <input
               type="password"
-              class="form-control bg-dark text-white"
+              class="form-control  text-white"
               name="password"
               placeholder="Password"
               value="{{password}}"
             />
           </div>
-          <div class="mb-3">
-            <label for="confirm_password">Cofirm Password:</label>
+          <div class="mb-2">
+            <label for="confirm_password">Confirmar contraseña:</label>
             <input
               type="password"
-              class="form-control bg-dark text-white"
+              class="form-control  text-white"
               name="confirm_password"
               placeholder="Confirm Password"
               value="{{confirm_password}}"
             />
           </div>
-          <button class="btn btn-success btn-block">
-            Signup
+          <button class="btn btn-danger btn-block w-100">
+            REGISTRARSE
           </button>
         </form>
       </div>
-      <p class="text-center">Already Have an Account?
-        <a href="/auth/signin" class="text-info">Login</a></p>
+      <p class="text-center">YA TIENES CUENTA?
+        <a href="/auth/signin" class="text-info">INICIA SESION</a></p>
     </div>
   </div>
 </div>
