--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -3,14 +3,14 @@
   <div class="col-md-3">
     <div class="card">
       <div class="card-body">
-        <h4 class="card-title d-flex justify-content-between align-items-center">
-          {{ title }} <a href="/notes/edit/{{_id}}"><i class="fas fa-edit"></i></a>
+        <h4 class="card-title d-flex justify-content-between align-items-center text-center">
+          Nombre del cliente: {{nombre}}<a href="/notes/edit/{{_id}}"><i class="fas fa-edit float-end ml-4"></i> </a>
+          </form>
         </h4>
-        <p>{{ description }} </p>
-        <!-- DELETE REQUEST -->
+        <input class="form-control text-center" type="text" placeholder='{{status}}' readonly>
         <form action="/notes/delete/{{_id}}?_method=DELETE" method="POST">
           <input type="hidden" name="_method" value="DELETE">
-          <button type="submit" class="btn btn-danger btn-block btn-sm">Delete</button>
+          <button type="submit" class="btn btn-primary btn-block btn-lg mt-2 w-100">Eliminar</button>
         </form>
       </div>
     </div>
@@ -18,10 +18,11 @@
   {{else}}
   <div class="card mx-auto">
     <div class="card-body">
-      <h1>Hello {{user.name}}</h1>
-      <p clsss="lead">There are not Notes yet.</p>
-      <a href="/notes/add" class="btn btn-success btn-block">Create One!</a>
+      <h1>Hola {{nombre}}</h1>
+      <p clsss="lead">Aún no hay ordenes</p>
+      <a href="/notes/add" class="btn btn-danger btn-block">Crear nueva orden</a>
     </div>
   </div>
   {{/each}}
 </div>
+
