--- a/src/views/notes/edit-note.hbs
+++ b/src/views/notes/edit-note.hbs
@@ -1,39 +1,30 @@
 {{#each errors}}
-  <div class="alert alert-danger alert-dismissible fade show" role="alert">
-    {{text}}
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
+<div class="alert alert-danger alert-dismissible fade show" role="alert">
+  {{text}}
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
 {{/each}}
 
-<div class="col-md-4 mx-auto">
+<div class="col-md-5 mx-auto">
   <div class="card">
-    <div class="card-header text-center">
-      <h3>Edit Note</h3>
+    <div class="card-header bg-black text-center">
+      <h3>EDITAR ORDEN <a href="/notes"><button class="btn btn-danger btn-sm float-end">ATRAS</button></a></h3>
     </div>
     <div class="card-body">
       <form action="/notes/edit-note/{{note._id}}?_method=PUT" method="POST">
         <input type="hidden" name="_method" value="PUT" />
-        <div class="mb-3">
-          <label for="title">Title:</label>
-          <input
-            type="text"
-            name="title"
-            class="form-control"
-            value="{{note.title}}"
-          />
+        <div class="card-header text-center">STATUS
+          <select class="form-select" aria-label="Default select example" id="status" name="status">
+            <option disabled selected>No iniciado</option>
+            <option value="En proceso">En proceso</option>
+            <option value="Finalizado">Finalizado</option>
+          </select>
+          <button class="btn btn-success w-100 mt-2" type="submit">
+            Guardar
+          </button>
         </div>
-        <div class="mb-3">
-          <label for="description">Description:</label>
-          <textarea
-            name="description"
-            class="form-control"
-          >{{note.description}}</textarea>
-        </div>
-        <button class="btn btn-primary w-100" type="submit">
-          Save
-        </button>
       </form>
     </div>
   </div>
