--- a/src/views/notes/new-note.hbs
+++ b/src/views/notes/new-note.hbs
@@ -1,32 +1,103 @@
-<div class="col-md-4 mx-auto">
-  <div class="card">
-    <div class="card-header bg-dark text-center">
-      <h3 class="text-white">New Note</h3>
-    </div>
-    <div class="card-body text-right">
-      <form action="/notes/new-note" method="POST">
-        <div class="mb-3">
-          <label for="title">Title:</label>
-          <input
-            type="text"
-            name="title"
-            class="form-control"
-            placeholder="Title"
-            autofocus
-          />
+<div class="col-md-7 mx-auto">
+    <div class="card">
+        <div class="card-header bg-dark text-center">
+            <h3 class="text-white">Nueva Orden  <a href="/notes"><button class="btn btn-danger btn-sm float-end">SALIR</button></a></h3>
         </div>
-        <div class="mb-3">
-          <label for="description">Description:</label>
-          <textarea
-            name="description"
-            class="form-control"
-            placeholder="Description"
-          ></textarea>
+        <div class="card-body text-right">
+            <form action="/notes/new-note" method="POST">
+                <div class="mb-3">
+                    <div class="form-group mb-1 text-center input-group-sm">Folio:
+                        <input type="number" name="nServicio" value="{{folio}}" class="form-control text-center"
+                            autofocus readonly>
+                    </div>
+                    <div class="form-group mb-1 input-group-sm">
+                        <input type="text" name="nombre" class="form-control" placeholder="Nombre del cliente"
+                            autofocus>
+                    </div>
+                    <div class="form-group mb-1 input-group-sm">
+                        <textarea name="descripcion" class="form-control"
+                            placeholder="Descripcion del trabajo"></textarea>
+                    </div>
+                    <!--select-->
+                    <div class="container text-center form-group mb-1">El equipo tiene contraseña
+                        <div class="form-group">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="contrasenaEquipo" id="inlineRadio1"
+                                    value="Si">
+                                <label class="form-check-label" for="inlineRadio1">Si</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="contrasenaEquipo" id="inlineRadio2"
+                                    value="No">
+                                <label class="form-check-label" for="inlineRadio2">No</label>
+                            </div>
+                        </div>
+                        <!--fin select-->
+                    </div>
+                    <div class="form-group input-group-sm">
+                        <input type="text" name="passEquipo" class="form-control" placeholder="Contraseña del equipo"
+                            autofocus>
+                    </div>
+                    <div class="container text-center form-group mb-1">Quiere respaldo del equípo
+                        <div class="form-group">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="respaldo" id="inlineRadio1"
+                                    value="Si">
+                                <label class="form-check-label" for="inlineRadio1">Si</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="respaldo" id="inlineRadio2"
+                                    value="No">
+                                <label class="form-check-label" for="inlineRadio2">No</label>
+                            </div>
+                        </div>
+                        <!--fin select-->
+                    </div>
+                    <div class="container text-center form-group mb-1">El equipo tiene daños fisicos
+                        <div class="form-group">
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="malEquipo" id="inlineRadio1"
+                                    value="Si">
+                                <label class="form-check-label" for="inlineRadio1">Si</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="malEquipo" id="inlineRadio2"
+                                    value="No">
+                                <label class="form-check-label" for="inlineRadio2">No</label>
+                            </div>
+                        </div>
+                        <!--fin select-->
+                    </div>
+                    <div class="form-group mb-1 input-group-sm">
+                        <textarea name="descripcionDanio" class="form-control"
+                            placeholder="Descripcion del daño"></textarea>
+                    </div>
+                    <div class="form-group input-group-sm">
+                        <input type="text" name="receptor" class="form-control" placeholder="Nombre de quien recibe"
+                            autofocus>
+                    </div>
+                    <div class="container text-center form-group mb-1 input-group-sm" hidden>Status
+
+                        <select class="form-select" id="status" name="status">
+                            <option selected value="No iniciado">No iniciado</option>
+                        </select>
+                        <!--fin select-->
+                    </div>
+                    <div class="form-group">
+
+                        <div class="input-group input-group-sm mb-3 mt-1">
+                            <span class="input-group-text" id="inputGroup-sizing-sm">Cotización $</span>
+                            <input type="number" class="form-control" name="presupuesto"
+                                aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                        </div>
+                        <div>
+
+                        </div>
+                        <button class="btn btn-outline-success w-100" type="submit">
+                            GUARDAR
+                        </button>
+            </form>
         </div>
-        <button class="btn btn-primary w-100" type="submit">
-          Save
-        </button>
-      </form>
     </div>
-  </div>
 </div>
+
