--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark p-2 bg-black">
   <div class="container">
-    <a class="navbar-brand" href="/">Notes App</a>
+    <a class="navbar-brand" href="/">Ordenes de trabajo</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/about">About</a>
+          <a class="nav-link" href="/about">Acerca de</a>
         </li>
       </ul>
       <ul class="navbar-nav ms-auto">
@@ -29,21 +29,21 @@
               data-bs-toggle="dropdown"
               aria-expanded="false"
             >
-              Notes
+              Perfil
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="/notes">All Notes</a>
-              <a class="dropdown-item" href="/notes/add">Add A Note</a>
+              <a class="dropdown-item" href="/notes">Todas las Ordenes</a>
+              <a class="dropdown-item" href="/notes/add">Nueva Orden</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="/auth/logout">Logout</a>
+              <a class="dropdown-item" href="/auth/logout">Cerrar sesion</a>
             </ul>
           </li>
         {{else}}
           <li class="nav-item">
-            <a class="nav-link" href="/auth/signin">Login</a>
+            <a class="nav-link" href="/auth/signin">Iniciar sesion</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/auth/signup">Register</a>
+            <a class="nav-link" href="/auth/signup">Registrarse</a>
           </li>
         {{/if}}
       </ul>
