--- a/src/views/notes/edit-note.hbs
+++ b/src/views/notes/edit-note.hbs
@@ -15,12 +15,22 @@
     <div class="card-body">
       <form action="/notes/edit-note/{{note._id}}?_method=PUT" method="POST">
         <input type="hidden" name="_method" value="PUT" />
-        <div class="card-header text-center">STATUS
-          <select class="form-select" aria-label="Default select example" id="status" name="status">
-            <option disabled selected>No iniciado</option>
-            <option value="En proceso">En proceso</option>
-            <option value="Finalizado">Finalizado</option>
-          </select>
+        <div class="container text-center form-group mb-1">STATUS
+          <div class="form-group">
+            <div class="form-check form-check-inline">
+              <input {{#if (eq note.status 'No iniciado' )}}checked{{else}}{{/if}} class="form-check-input" type="radio"
+                name="status" id="status" value="No iniciado">
+              <label class="form-check-label" for="inlineRadio1">No iniciado</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input {{#if (eq note.status 'En proceso' )}}checked{{else}}{{/if}} class="form-check-input" type="radio" name="status" id="status" value="En proceso">
+              <label class="form-check-label" for="inlineRadio2">En proceso</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input {{#if (eq note.status 'Finalizado' )}}checked{{else}}{{/if}} class="form-check-input" type="radio" name="status" id="status" value="Finalizado">
+              <label class="form-check-label" for="inlineRadio2">Finalizado</label>
+            </div>
+          </div>
           <button class="btn btn-success w-100 mt-2" type="submit">
             Guardar
           </button>
