--- a/src/views/notes/new-note.hbs
+++ b/src/views/notes/new-note.hbs
@@ -1,7 +1,8 @@
 <div class="col-md-7 mx-auto">
     <div class="card">
         <div class="card-header bg-dark text-center">
-            <h3 class="text-white">Nueva Orden  <a href="/notes"><button class="btn btn-danger btn-sm float-end">SALIR</button></a></h3>
+            <h3 class="text-white">Nueva Orden <a href="/notes"><button
+                        class="btn btn-danger btn-sm float-end">SALIR</button></a></h3>
         </div>
         <div class="card-body text-right">
             <form action="/notes/new-note" method="POST">
@@ -13,6 +14,13 @@
                     <div class="form-group mb-1 input-group-sm">
                         <input type="text" name="nombre" class="form-control" placeholder="Nombre del cliente"
                             autofocus>
+                    </div>
+                    <div class="form-group mb-1 input-group-sm">
+                        <input type="text" name="nTelefono" class="form-control" placeholder="Numero de telefono"
+                            autofocus>
+                    </div>
+                    <div class="form-group mb-1 input-group-sm">
+                        <input type="text" name="email" class="form-control" placeholder="Correo electronico" autofocus>
                     </div>
                     <div class="form-group mb-1 input-group-sm">
                         <textarea name="descripcion" class="form-control"
@@ -100,4 +108,3 @@
         </div>
     </div>
 </div>
-
