--- a/src/views/template.hbs
+++ b/src/views/template.hbs
@@ -19,12 +19,12 @@
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
             padding: 20px;
             margin: 20px auto;
-            max-width: 600px;
+            max-width: 900px;
         }
         .titulo {
             text-align: center;
             color: #3498db;
-            font-size: 24px;
+            font-size: 50px;
             font-weight: bold;
             margin-bottom: 20px;
         }
@@ -60,8 +60,8 @@
         <div class="nota-remision">
             <h2 class="titulo">Nota de Remisión</h2>
             <div class="cliente-info">
-                <p><strong>Cliente:</strong> Nombre del Cliente</p>
-                <p><strong>Dirección:</strong> Dirección del Cliente</p>
+                <p><strong>Cliente:</strong> {{nombre}}</p>
+                <p><strong>Dirección:</strong> {{nServicio}}</p>
                 <p><strong>Teléfono:</strong> Teléfono del Cliente</p>
             </div>
             <table class="tabla-productos">
@@ -91,7 +91,21 @@
             <div class="total">
                 <p><strong>Total: $65.00</strong></p>
             </div>
+
+<!--<div id="qrcode"></div>-->
+
         </div>
     </div>
+
+    <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+
+<!--<script>
+  var qrcode = new QRCode(document.getElementById("qrcode"), {
+    text: "http://localhost:4000/notes",  // Cambia esta URL por la que necesites
+    width: 128,
+    height: 128,
+  });
+</script>-->
+
 </body>
 </html>
