--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -14,8 +14,12 @@
   <!--Google fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Nosifer&family=Tilt+Prism&display=swap"
     rel="stylesheet">
-  {{> navigation }}
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
+
+  {{> navigation }}
   <main class="container p-3">
     <div class="col-md-4 offset-md-4">
       {{> messages }}
@@ -24,11 +28,16 @@
     {{{ body }}}
   </main>
 
+
+
   <!-- Scritps -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+
+
 
   <script>
     window.setTimeout(function () {
@@ -59,6 +68,8 @@
       })
     })()
   </script>
+
+    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
 
   </body>
 
