--- a/src/views/piezas/all-piezas.hbs
+++ b/src/views/piezas/all-piezas.hbs
@@ -1,117 +1,130 @@
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary float-end btn-sm" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+<button type="button" class="btn btn-primary float-end btn-sm mb-1" data-bs-toggle="modal"
+  data-bs-target="#staticBackdrop">
   NUEVA PIEZA
 </button>
-
 <!-- Modal -->
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
   aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="staticBackdropLabel">NUEVA PIEZA</h1>
+        <h2 class="modal-title fs-5" id="staticBackdropLabel">NUEVA PIEZA</h2>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
+
       <div class="modal-body">
-        <form action="/piezas/new-pieza" method="post" class="mb-2">
-          <input type="text" name="nombre" placeholder="Nombre de la pieza" required>
-          <input type="number" name="cantidad" placeholder="Cantidad" required>
-          <input type="number" name="precio" placeholder="Precio">
-          <button class="btn btn-success btn-sm" type="submit">Agregar</button>
+        <form action="/piezas/new-pieza" method="post" class="mb-2 form-control">
+          <input class="form-control" type="text" name="nombre" placeholder="Nombre de la pieza" required>
+          <input class="form-control mt-1" type="number" name="cantidad" placeholder="Cantidad" required>
+          <input class="form-control mt-1" type="number" name="precio" placeholder="Precio">
           <div class="mt-2 mb-2">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary">Understood</button>
+            <button type="button" class="btn btn-primary " data-bs-dismiss="modal">Cerrar</button>
+            <button type="submit" class="btn btn-success  float-end">Insertar</button>
           </div>
         </form>
       </div>
     </div>
   </div>
 </div>
-<div class="col-md-9 mx-auto">
-  <div class="card">
-    <div class="container mt-2 mb-2">
-      <div class="card">
-        <div class="text-end p-2">
-          <input type="text" id="filtro" placeholder="Filtrar por nombre" class="mt-2 mb-2 mx-auto form-control">
-        </div>
-        <ul id="lista-piezas">
 
-          {{#each piezas}}
-          <li>
-            {{nombre}} - <span data-cantidad="{{cantidad}}">Cantidad: {{cantidad}}</span> - $:<span
-              data-precio="{{precio}}">{{precio}}</span>
-            <button type="button" class="recuperar-nombre btn btn-warning btn-sm" data-nombre="{{nombre}}">Recuperar
-              Nombre</button>
-            <form action="/piezas/delete/{{_id}}?_method=DELETE" method="post" style="display:inline;">
-              <button class="btn btn-danger btn-sm" type="submit">Eliminar</button>
-            </form>
-            <form action="/piezas/eliminar/{{_id}}?_method=DELETE" method="post" style="display:inline;">
-              <button class="btn btn-primary btn-sm" type="submit">Eliminar Objeto</button>
-            </form>
-            <button type="submit" class="seleccionar-pieza mb-1 btn btn-success btn-sm">Agregar pieza</button>
-            <!-- Botón de selección -->
-          </li>
-          {{/each}}
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-<label id="total-label">Total: $<span id="total-valor">0</span></label>
-<button type="button" id="btn-pagar">Pagar</button>
+
+
+<table class="table table-dark table-striped" id="tabla">
+  <thead class="bg-light">
+    <tr>
+      <th>Nombre </th>
+      <th>Cantidad</th>
+      <th>Precio</th>
+      <th>Acciones</th>
+    </tr>
+  </thead>
+  <tbody>
+    {{#each piezas}}
+    <tr>
+      <td>{{nombre}}</td>
+      <td>{{cantidad}}</td>
+      <td> ${{precio}}</td>
+      <td>
+        <form action="/piezas/delete/{{_id}}?_method=DELETE" method="post" style="display:inline;">
+          <button class="btn btn-danger btn-sm mb-1" type="submit"><i class="fas fa-trash"></i> Eliminar uno</button>
+        </form>
+        <form action="/piezas/eliminar/{{_id}}?_method=DELETE" method="post" style="display:inline;">
+          <button class="btn btn-primary btn-sm mb-1" type="submit"><i class="fas fa-trash"></i> Eliminar
+            Objeto</button>
+        </form>
+        <button type="button" class="btn btn-warning mb-1 btn-sm recuperar-nombre" data-nombre="{{nombre}}"
+          data-bs-toggle="modal" data-bs-target="#staticBackdro">
+          <i class="fas fa-pencil-alt"></i> Más Stock
+        </button>
+
+        <div class="modal fade" id="staticBackdro" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+          aria-labelledby="staticBackdroLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h2 class="modal-title fs-5" id="staticBackdroLabel">NUEVA PIEZA</h2>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <form action="/piezas/new-pieza" method="post" class="mb-2 form-control">
+                  <input class="form-control" type="text" name="nombre" placeholder="Nombre de la pieza" readonly
+                    required>
+                  <input class="form-control mt-1" type="number" name="cantidad" placeholder="Cantidad" required>
+                  <div class="mt-2 mb-2">
+                    <button type="button" class="btn btn-primary " data-bs-dismiss="modal">Cerrar</button>
+                    <button type="submit" class="btn btn-success  float-end">Insertar</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </td>
+    </tr>
+    {{/each}}
+  </tbody>
+</table>
 
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <script>
   $(document).ready(function () {
-    $('#filtro').on('input', function () {
-      var filtro = $(this).val().toLowerCase();
-      $('#lista-piezas li').each(function () {
-        var texto = $(this).text().toLowerCase();
-        if (texto.indexOf(filtro) !== -1) {
-          $(this).show();
-        } else {
-          $(this).hide();
+    $('#tabla').DataTable({
+      searching: true,
+      language: {
+        "decimal": "",
+        "emptyTable": "No hay datos disponibles en la tabla",
+        "info": "Mostrando _START_ a _END_ de _TOTAL_ entradas",
+        "infoEmpty": "Mostrando 0 a 0 de 0 entradas",
+        "infoFiltered": "(filtrado de _MAX_ entradas totales)",
+        "infoPostFix": "",
+        "thousands": ",",
+        "lengthMenu": "Mostrar _MENU_ entradas",
+        "loadingRecords": "Cargando...",
+        "processing": "Procesando...",
+        "search": "Buscar:",
+        "zeroRecords": "No se encontraron registros coincidentes",
+        "paginate": {
+          "first": "Primero",
+          "last": "Último",
+          "next": "Siguiente",
+          "previous": "Anterior"
+        },
+        "aria": {
+          "sortAscending": ": Activar para ordenar la columna en orden ascendente",
+          "sortDescending": ": Activar para ordenar la columna en orden descendente"
         }
-      });
-    });
-
-    $('.recuperar-nombre').on('click', function () {
-      var nombre = $(this).data('nombre');
-      $('input[name="nombre"]').val(nombre);
-    });
-  });
-</script>
-
-<script>
-  $(document).ready(function () {
-    $('.seleccionar-pieza').on('click', function () {
-      const precio = parseFloat($(this).closest('li').find('[data-precio]').data('precio'));
-      const cantidadElement = $(this).closest('li').find('[data-cantidad]');
-      let cantidad = parseInt(cantidadElement.data('cantidad'));
-      const totalElement = $('#total-valor');
-      let total = parseFloat(totalElement.text());
-
-      if (cantidad > 0) {
-        total += precio;
-        cantidad -= 1;
-
-        // Actualizar el DOM
-        cantidadElement.data('cantidad', cantidad);
-        cantidadElement.text('Cantidad: ' + cantidad);
-
-        // Actualizar el total
-        totalElement.text(total.toFixed(2));
       }
     });
   });
 </script>
 
 <script>
-  $('#btn-pagar').on('click', function () {
-
-    $('#total-valor').text('0');
+  $(document).ready(function () {
+    $('.recuperar-nombre').on('click', function () {
+      var nombre = $(this).data('nombre');
+      $('input[name="nombre"]').val(nombre);
+    });
   });
 </script>
