--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,6 +1,6 @@
 body {
-  height: 950px;
-  background-image: url("/img/fondo3.jpg");
+  height: 900px;
+  background-image: url("/img/fondo9.png");
   background-size: cover;
   background-repeat: repeat;
   background-position: fixed;
