--- a/src/views/piezas/all-piezas.hbs
+++ b/src/views/piezas/all-piezas.hbs
@@ -128,3 +128,28 @@
     });
   });
 </script>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+  const socket = io();
+
+  const messagesDiv = document.getElementById('messages');
+  const messageInput = document.getElementById('messageInput');
+
+  // Escuchar mensajes del servidor
+  socket.on('message', (message) => {
+    const messageElement = document.createElement('div');
+    messageElement.textContent = message;
+    messagesDiv.appendChild(messageElement);
+  });
+
+  // Función para enviar mensajes
+  function sendMessage() {
+    const message = messageInput.value;
+    socket.emit('message', message);
+    messageInput.value = '';
+  }
+
+  window.sendMessage = sendMessage;
+});
+</script>
